About Embedded: fix scrollbar styling

--- a/assets/css/about-embedded.scss
+++ b/assets/css/about-embedded.scss
@@ -14,9 +14,22 @@ body {
     color: #fff;
     background-color: #2b2b2b;
 
-    font: 400 13px/20px ui-sans-serif, sans-serif;
+    font: 400 13px/20px -apple-system, system-ui, ui-sans-serif, sans-serif;
 
     -webkit-font-smoothing: antialiased;
+}
+ 
+html::-webkit-scrollbar {
+    width: 10px; 
+ }
+
+html::-webkit-scrollbar-track {
+  background-color: #2b2b2b;
+}
+
+html::-webkit-scrollbar-thumb {
+  background: #4e4e4e;
+  border-radius: 25px;
 }
 
 * {
